specified Gradle version

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,16 @@
 plugins {
     id 'java'
+    id 'application'
     id 'se.patrikerdes.use-latest-versions' version '0.2.18'
     id 'com.github.ben-manes.versions' version '0.41.0'
 }
 
 group 'hexlet.code'
 version '1.0-SNAPSHOT'
+
+application {
+    mainClass = 'hexlet.code.App'
+}
 
 repositories {
     mavenCentral()
@@ -18,4 +23,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+compileJava {
+    options.release = 17
 }
